When I hit the heavenly gates I'll be cool beside Jay-Z